--- a/Sources/Projet/platformio.ini
+++ b/Sources/Projet/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.7.0
 	adafruit/Adafruit SSD1306@^2.4.1
 	adafruit/Adafruit GFX Library@^1.10.4
+	adafruit/DHT sensor library@^1.4.1
